[package]
name = "atlas-log-transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

serialize_serde = ["serde", "bincode"]
serialize_capnp = []

default = ["serialize_serde"]

[dependencies]
anyhow = { version = "1.0", features = [] }
thiserror = "1.0"
atlas-capnp = { path = "../Atlas-capnp" }
atlas-common = { path = "../Atlas-Common" }
atlas-core = { path = "../Atlas-Core" }
atlas-logging-core = { path = "../Atlas-Logging-Core" }
atlas-communication = { path = "../Atlas-Communication" }
atlas-metrics = { path = "../Atlas-Metrics" }

bincode = { version = "2.0.0-rc.3", features = ["serde"], optional = true }

serde = { version = "1.0", optional = true }
capnp = "0.16.1"

log = "0.4.17"